fixed mobile horizontal scroll on mobile and alignment of title on home page

--- a/src/_theme.scss
+++ b/src/_theme.scss
@@ -12,11 +12,14 @@ $danger: #F44336;
 
 html {
     background-color: #FFFFFF;
+    max-width: 100%;
+    width: auto;
 }
 
 body {
-    max-width: 100%;
     overflow-x: hidden;
+    max-width: 100vw;
+    width: auto;
 }
 
 * {
