--- a/src/components/pages/Home/Home.scss
+++ b/src/components/pages/Home/Home.scss
@@ -174,6 +174,20 @@
     max-width: 89%;
 }
 
+.home-image-title-container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+}
+
+.home-title-space {
+    font-size: 1.75rem;
+}
+
 @media only screen and (max-width: 1100px) {
     .home-image-body {
         font-size: 1rem;
@@ -191,7 +205,6 @@
         text-align: center;
         font-size: 3rem;
         font-weight: 700;
-        color: #FFFFFF;
     } 
 
     .home-blog-container {
@@ -251,7 +264,6 @@
         text-align: center;
         font-size: 3rem;
         font-weight: 700;
-        color: #FFFFFF;
     } 
 }
 
